--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -70,9 +70,7 @@
             <li><a href="#">Instagram</a></li>
         </ul>
 
-    <footer>
-        <p> 2023 Our Website. All rights reserved.</p>
-    </footer>
+
 
     
 </body>
