--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style3.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -17,10 +17,10 @@
                     <ul>
                         <li class="active"><a href="#">HOME</a></li>
                         <br>
-                        <li class="active"><a href="DESTINACIONS.HTML">DESTINACIONS</a></li>
+                        <li><a href="DESTINACIONS.HTML">DESTINACIONS</a></li>
                         <br>
 
-                        <li class="active"><a href="ABOUT US.html">ABOUT US</a></li>
+                        <li><a href="ABOUT US.html">ABOUT US</a></li>
 
                     </ul>
                 </nav>
