--- a/index2.html
+++ b/index2.html
@@ -47,7 +47,7 @@
 
             
             <div class="services-box">
-                <div class="services">
+                <div class="photo-box">
                     <div>
                     <ul>
                         <li>Dubai</li>
@@ -59,7 +59,7 @@
                 </div>
         </div>
         <div class="services-box">
-            <div class="services">
+            <div class="photo-box">
                 <div class="toimg">
                     <a href="https://www.visitdubai.com/en/explore-dubai/about-dubai"><img src="dubai.avif" width="60%"></a>
                     <a href="https://www.spain.info/en/"><img src="spain.avif" width="60%"></a>
@@ -104,7 +104,7 @@
 
 
             <div class="services-box">
-                <div class="services">
+                <div class="services2">
 
                     <h3>CONTACT US</h3>
                     <p>
